# zero2prod

./: .env  .gitignore  Cargo.toml  configuration.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: healtz.rs
